trunk/Archive2/c8/9715f5d0212104/output
main.cpp: In function 'int main()':
main.cpp:10:37: error: 'printf' was not declared in this scope
         printf("This is the main!\n");
                                     ^
main.cpp:14:27: error: 'scanf' was not declared in this scope
         scanf("%d",&choice);
                           ^
main.cpp:18:21: error: 'map' was not declared in this scope
                 map();
                     ^
main.cpp:21:20: error: 'rc' was not declared in this scope
                 rc();
                    ^
